improved the nav UI to stop horizontal scroll on mobile

--- a/client/css/booking.css
+++ b/client/css/booking.css
@@ -13,12 +13,24 @@
     text-align: center;
 }
 
-.step-1{
-    
+.step-0 h2{
+    font-size: clamp(2.7rem, 2.7vw, 2.7rem);
 }
 
 .cta{
     justify-content: center;
     background: rgba(255, 255, 255, 0.99);
     width: 100%;
+    padding: 0;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+@media (max-width: 720px) {
+    .cta-btn {
+        width: auto;
+    }
+    .cta-btn{
+        min-width: 150px;
+    }
 }
